# capstone-SignalSigma

./: .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .pubignore  Makefile  README.md  app.py  makefile  pyproject.toml  readme  readme.md  requirements.txt
.github/workflows/: are-notebooks-cleared.yaml  validate-ipynb.yaml
app/: generic_stock_prediction.py
archive/template/: README.md
archive/template/notebooks/: EDA-and-modeling.ipynb
drafts/: 00_0522--bookmarks.md  03_0519--the-final-week.md  23_0429--models-dl-rl.docx  29_0423--01_flowchart.docx  29_0423--02_project.docx  29_0423--03_concepts-data-modeling-and-strategy.docx  29_0423--04_concepts-data-modeling-and-strategy.docx  29_0423--06_finalized-timeline_milestones-breakdown.docx  29_0423--07_team-onboarding-guide.docx  readme.md
drafts/03_0519--the-final-week/: slides.md
models/: baseline-linReg.ipynb  baseline_xgboost_tsla.ipynb  streamlit_app.py
notebooks/: TFT_Darts_Train_val_Single_target_quantail_predication.ipynb  TFT_Darts_Train_val_Single_target_quantail_predication_sliding_validation.ipynb  TFT_Raw_Data.ipynb  data-pipeline-model.ipynb  data_engineering_pipeline.py  data_gathering.ipynb  data_inspection.ipynb  data_pipeline_model.ipynb  streamlit_fred_macro_plot.py  tft-forecasting-main-code.ipynb  tft_FRED_Macro.py  tft_MarketMacroCompressor.py  tft_TemporalFeatureCombiner.py  tft_data_gathering.py  tft_dataset_preparation.py  tft_feature_engineering.py  tft_features_selection.py  tft_loss_history.py
notebooks/baseline-models/: random-forest_aapl.ipynb  xgboost_tsla.ipynb
notebooks/data-preparation/: 1--data-retrieval.ipynb  2--data-inspection.ipynb  3--merge.ipynb  4--feature-engineering.ipynb  5--ts-decomposition.ipynb  README.md  correlations.ipynb  ipynbrc.py
notebooks/data-preparation_legacy/: 1--gathering.ipynb  2--inspection.ipynb  TFT_Raw_Data.ipynb
notebooks/pitches-final-models/: deep-ar.ipynb  dssm-2.ipynb  dssm.ipynb  lstm.ipynb
scripts/: reduce_to_public_version.py
src/: ipynbrc.py
src/signal_sigma/: data_engineering_pipeline.py  data_gathering.py  data_preparator.py  feature_engineering.py  features_selection.py  main.py  main_v01.py  market_macro_compressor.py  streamlit_forecast_app.py  streamlit_fred_macro_plot.py
src/signal_sigma/cli/: __main__.py  app.py
src/signal_sigma/config/: cfg.py  cfg_legacy.py
src/signal_sigma/core/: __main__.py  data_engineering_pipeline.py  data_gathering.py  data_preparator.py  feature_engineering.py  features_selection.py  fred_macro.py  loss_history.py  main.py  main_wrap.py  temporal_feature_combiner.py
